--- a/versuch_2/protokoll.tex
+++ b/versuch_2/protokoll.tex
@@ -14,6 +14,7 @@
 \input{theorie}
 \input{durchfuehrung}
 \input{ergebnisse}
+\bibliographystyle{natdin}
 \input{bibliography}
 \newpage
 %\bibliographystyle{natdin}
