--- a/versuch_2/theorie.tex
+++ b/versuch_2/theorie.tex
@@ -180,6 +180,7 @@ und nach Einsetzen in \ref{form:j}:
 
 \begin{equation}
 \frac{\partial T}{\partial t} = \frac{\kappa}{\rho \cdot c} \Delta T, 
+\label{form:leitung}
 \end{equation}
 wobei hier $\Delta$ den Laplace-Operator darstellt. 
 \\
