--- a/versuch_2/header.tex
+++ b/versuch_2/header.tex
@@ -56,7 +56,7 @@
 
 %Formatierungsanweisungen
 \newcommand{\wichtig}[1]{\underline{\large{#1}}}
-\newcommand{\aref}[1]{(Abb. \ref{#1})}
+\newcommand{\aref}[1]{Abb. \ref{#1}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\K}{\mathbb{K}}
 \newcommand{\C}{\mathbb{C}}
