--- a/besprechungsprotokolle/131126Protokoll.tex
+++ b/besprechungsprotokolle/131126Protokoll.tex
@@ -1,23 +1,49 @@
+\documentclass[
+]{scrartcl}
+
+%Deutsche Sprachunterstützung
+\usepackage[utf8]{inputenc}
+\usepackage[ngerman]{babel}
+\usepackage{marvosym}
+\DeclareUnicodeCharacter{20AC}{\EUR}
+
+%Für das Einbinden von Bildern
+%\usepackage{graphicx}
+
 %Tabellen
 \usepackage{array}
 
 %Tabellen automatisch schoener
 \usepackage{booktabs}
 
+%Caption
+\usepackage{caption}
+\usepackage{subcaption}
+
+%Formeln
+\usepackage{mathtools}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{amstext}
+\usepackage{dsfont}
+
+%\usepackage{mnsymbol}
+
+%Vectorpfeile schöner
+\usepackage{esvect}
+
 %Formatierung
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{microtype}
-\usepackage{circuitikz}
 %\usepackage[german=guillemets]{csquotes}
+
 %Formatierungsanweisungen
 \newcommand{\wichtig}[1]{\underline{\large{#1}}}
 \newcommand{\aref}[1]{(s.Abb. \ref{#1})}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\K}{\mathbb{K}}
 \newcommand{\C}{\mathbb{C}}
-
-
 \begin{document}
 \title{7. Besprechungsprotokoll PPG8}
 \date{26.11.2013}
