--- a/besprechungsprotokolle/131217Protokoll.tex
+++ b/besprechungsprotokolle/131217Protokoll.tex
@@ -46,19 +46,31 @@
 \newcommand{\C}{\mathbb{C}}
 \begin{document}
 
-\title{Besprechungs-Protokoll Gruppentreffen PPG8-1}
-\date{15. Oktober 2013}
+\title{Besprechungs-Protokoll Gruppentreffen PPG8-10}
+\date{17. Dezember 2013}
 \maketitle
 
 \paragraph*{Anwesende}
-Leon Brückner,
 Udo Beier,
-Sebastian Ziegler,
-Marco Zech,
+Leon Brückner,
 Valentin Olpp,
+Marco Zech,
+Sebastian Ziegler,
 Domenico Tiziani
+
 
 \section{Status des Projekts}
 
-\end{itemize}
+\subsection{Zweiter Versuch}
+Das Protokoll wurde vom Tutor korrigiert und nach einigen Verbesserungen am Montag bei Fr. Anton abgegben.
+
+\subsection{Dritter Versuch}
+Die Messungen am Doppelpendel sind abgeschlossen.
+
+\subsection{Vierter Versuch}
+Als Vorbereitung auf den vierten Versuch (Test verschiedener Strömungsmesstechniken) wurden bislang theoretische Betrachtungen zum Bau einer Brandelsonde/Kielsonde bzw. eines Pitotrohres angestellt.
+
+\section{Weiteres Vorgehen}
+Demnächst werden Marco Zech und Udo Beier die theoretischen Betrachtungen, Sebastian Ziegler die Auswertung, Valentin Olpp die Versuchsdurchführung und Leon Brückner das Vorwort zum dritten Versuch verfassen.
+Außerdem wird der vierte Versuch vorbereitet.
 \end{document}
