änderung verweis auf abbildung kompiliert

--- a/versuch_1/ergebnisse.tex
+++ b/versuch_1/ergebnisse.tex
@@ -1,7 +1,7 @@
 \section{Ergebnisse und Diskussion}
 
 \subsection{Durchlassfilter}
-Beim Aufzeichnen der Spannungskurven für verschiedene ohmsche Widerstände fiel auf, dass die Maxima im Vergleich zu denen der Theoriekurven berechnet nach \eqref{form:durchlass} deutlich zu klein waren. Dabei wurde auch der an weiteren Bauteilen, hierbei vor allem die Spule, abfallende Widerstand berücksichtigt. Dieser wurde zuvor zu 3,0 $  \Omega $ ausgemessen (siehe Abb. \ref{plot:durchlass+R_ges}).
+Beim Aufzeichnen der Spannungskurven für verschiedene ohmsche Widerstände fiel auf, dass die Maxima im Vergleich zu denen der Theoriekurven berechnet nach \eqref{form:durchlass} deutlich zu klein waren (siehe Abb. \ref{plot:durchlass+R_ges}). Dabei wurde auch der an weiteren Bauteilen, hierbei vor allem die Spule, abfallende Widerstand berücksichtigt. Dieser wurde zuvor zu 3,0 $  \Omega $ ausgemessen .
 \begin{figure}[h]
         \includegraphics[width=.9\textwidth]{images/plot/durchlassfilter+theorie+R_ges.png}
 \caption{Plot der Messdaten des Durchlassfilters unter Berücksichtigung des gemessenen Gesamtwiderstandes}
