--- a/versuch_2/theorie.tex
+++ b/versuch_2/theorie.tex
@@ -173,7 +173,7 @@ Weiter ergibt sich über
 \end{equation}
 mit $c$ als massebezogene Wärmekapazität, $m$ als Masse, $\rho$ als Dichte. 
 
-Da $ \vec{j} $ als eine stetige Funktion angenommen werden kann, folgt aus dem Mittelwertsatz der Integralrechnung, dass ein $ \Theta \in [t; t + \Delta t] existiert mit:
+Da $ \vec{j} $ als eine stetige Funktion angenommen werden kann, folgt aus dem Mittelwertsatz der Integralrechnung, dass ein $ \Theta \in [t; t + \Delta t] $ existiert mit:
 
 \begin{equation}
 \int_{t}^{t + \Delta t} dt' \int_{V} -\nabla \vec{j} dV = \Delta t \cdot \int_{V} -\nabla \vec{j(\Theta)} dV
